--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,14 @@
   grid-template-columns: 50px 50px 50px;
   grid-template-rows: 50px 50px 50px;
 }
+
+.board-cell{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  border: 1px solid black;
+}
