--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
-.board {
-  display: grid;
-  grid-template-columns: 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px;
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(63, 63, 70);
+  --pink: rgb(254, 230, 227);
+  --black:rgb(63, 63, 70);
 }
 
-.board-cell{
+html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+  background-color: var(--pink);
+}
+
+button {
 	background: none;
 	color: inherit;
 	border: none;
@@ -12,5 +21,90 @@
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-  border: 1px solid black;
+}
+
+.start-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  width: 100vw;
+  height: 95vh;
+  top: 0;
+  left: 0;
+  background-color: var(--pink);
+}
+
+.start-title {
+  font-size: 4.5rem;
+}
+
+.choose-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100vw;
+}
+
+.vs {
+  font-size: 3.5rem;
+  font-weight: 400;
+}
+
+.animal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+}
+
+.start-container img {
+  width: 240px;
+  height: 240px;
+  border: 1px solid var(--black);
+}
+
+.board {
+  display: grid;
+  grid-template-columns: 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px;
+}
+
+.board-cell {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  border: 1px solid var(--black);
+}
+
+.start-button {
+  background-color: var(--pink);
+  border: 2px solid var(--black);
+  border-radius: 8px;
+  font-size: 1.75rem;
+  height: 3rem;
+  padding: 0 25px;
+  box-shadow: 8px 8px var(--black);
+  transition: 0.3s;
+}
+
+.start-button:hover {
+  z-index: 1;
+  box-shadow: 0px 0px var(--black);
+}
+
+.button-container {
+  display: flex;
+  gap: 5vw;
+}
+
+.button-container .start-button {
+  font-size: 1.5rem;
+  height: 2.5rem;
+  padding: 0 20px;
 }
