--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ button {
 }
 
 .start-container {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -34,6 +34,10 @@ button {
   top: 0;
   left: 0;
   background-color: var(--pink);
+}
+
+.show {
+  display: flex;
 }
 
 .start-title {
@@ -82,7 +86,7 @@ button {
   border: 1px solid var(--black);
 }
 
-.start-button {
+.settings-button {
   background-color: var(--pink);
   border: 2px solid var(--black);
   border-radius: 8px;
@@ -93,7 +97,7 @@ button {
   transition: 0.3s;
 }
 
-.start-button:hover {
+.settings-button:hover {
   z-index: 1;
   box-shadow: 0px 0px var(--black);
 }
